se agregaron las siguientes funciones: input para elegir el tamaño del canvas, input para cambiar el color y un borrador

--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Etch-a-Sketch</h1>
+    <h1 id="title">Paint pirata</h1>
+    <div id ="columnLeft">
+
+    <div id="options">
+
+      <div id ="optSize"> <label> canvas sizes: <input id="iptSize">  </label> <button id="btn"> confirm</button> </div>
+      <div id="optColor"> <label>color: <input id="iptColor" type="color"></label> <div id="erase"></div> </div>
+
+    </div>
+
+
     <div id="spaceToDraw"></div>
+    </div>
     
 </body>
 </html>
